# zmm

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  NOTICE  README.md  TODO.md  pyproject.toml  summarize_zoom_transcripts.cfg.example  summarize_zoom_transcripts.py  zmm  zoom_meeting_manager.cfg.example  zoom_meeting_manager.py
.agents/: README.md
.agents/comms/: .gitignore  README.md
.agents/docs/specs/: README.md
.agents/docs/walkthroughs/: README.md
.agents/plans/reusable/: README.md
.agents/plans/superseded/: README.md
.agents/workflows/: README.md  VERSION  index.md
.agents/workflows/advise/: README.md  advise.md
.agents/workflows/assess/: README.md  assess.md
.agents/workflows/assess-all/: README.md  assess-all.md
.agents/workflows/benchmark/: README.md  benchmark.md
.agents/workflows/getting-started/: README.md  getting-started.md
.agents/workflows/incident/: README.md  incident.md
.agents/workflows/list-workflows/: README.md  list-workflows.md
.agents/workflows/migrate/: README.md  migrate.md
.agents/workflows/plan-review/: README.md  plan-review.md
.agents/workflows/plan-review-long/: 01-discover-and-snapshot.md  02-review-and-revise.md  03-resolve-and-finalize.md  README.md  plan-review-long.md  report-template.md  review-rubric.md
.agents/workflows/release-notes/: README.md  release-notes.md
.agents/workflows/release-review/: 00-run-protocol.md  01-current-state.md  02-quality-security-edge-cases.md  03-tests-regression.md  04-docs-specs-examples.md  05-feature-usability-maintainability.md  06-compatibility-packaging-release.md  07-implementation.md  08-final-ship-review.md  09-release-execution.md  MANIFEST.md  README.md  fix-decision-policy.md  reference.md
.agents/workflows/scaffold/: README.md  scaffold.md
.agents/workflows/setup-repo/: README.md  setup-repo.md
.agents/workflows/spec/: README.md  spec.md
.agents/workflows/templates/: README.md  agents-docs-README.md  agents-docs-prompts-README.md  agents-docs-research-README.md  plans-README.md  plans-executed-README.md  plans-not-executed-README.md  plans-pending-README.md  workflow-artifacts-README.md
.agents/workflows/verify/: README.md  verify.md
.agents/workflows/verify-execution/: README.md  verify-execution.md
.claude/commands/: README.md  advise.md  assess-accessibility.md  assess-all.md  assess-compatibility.md  assess-compliance-readiness.md  assess-compliance.md  assess-data-exfiltration.md  assess-functionality.md  assess-generalization.md  assess-guiding-principles.md  assess-intrusion-detection.md  assess-memory-resources.md  assess-performance.md  assess-privacy.md  assess-ransomware-resilience.md  assess-security.md  assess-self-documentation.md  assess-supply-chain.md  assess-testing.md  assess-ui-ux.md  assess.md  benchmark.md  getting-started.md  incident.md  list-workflows.md  migrate.md  plan-review-long.md  plan-review.md  release-notes.md  release-review-plan.md  release-review.md  scaffold.md  setup-repo.md  spec.md  verify-execution.md  verify.md
.github/workflows/: ci.yml  secret-scan.yml
.opencode/commands/: advise.md  assess-all.md  assess-api-design.md  assess-architecture.md  assess-bugs.md  assess-documentation.md  assess-edge-cases.md  assess-logging-audit.md  assess-reliability.md  assess-threat-model.md  assess-use-cases.md  assess.md  benchmark.md  getting-started.md  incident.md  list-workflows.md  migrate.md  plan-review-long.md  plan-review.md  release-notes.md  release-review-plan.md  release-review.md  scaffold.md  setup-repo.md  spec.md  verify-execution.md  verify.md
deprecated/: summarize_zoom_transcripts.py
plans/: 2026-06-05-improve-summarize_zoom_transcripts.md  2026-06-05-zmm-implementation-closeout.md  2026-06-05-zmm-implementation-notes.md
prompts/: cleanup_transcript.txt  default.txt  extract_items.txt  meeting_generic.txt  output_structured_notes.txt  prioritize_items.txt
prompts/examples/: corrections.example.txt  myself.example.txt  people.example.txt  style.example.txt  work.example.txt
release-review/: 00-run-protocol.md  01-current-state.md  02-quality-security-edge-cases.md  03-tests-regression.md  04-docs-specs-examples.md  05-feature-usability-maintainability.md  06-compatibility-packaging-release.md  07-implementation.md  08-final-ship-review.md  MANIFEST.md  README.md
release-review/templates/: action-register.csv  audit-lane-report.md  execution-plan.md  final-bug-security-audit.md  final-response.md  finding-register.csv  implementation-plan.md
schemas/: summary.json
tests/: conftest.py  helpers.py  test_commands.py  test_contract.py  test_core.py  test_integration.py  test_packaging.py  test_parser.py
workflow-artifacts/release-review/20260606-172943/: 00-run-metadata.md  01-repository-inventory.md  05-decisions.md  (+13 more)
(+69 files in other folders)
