[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zmm"
version = "0.1.0"
description = "Zoom Meeting Manager — inventory, summarize, extract, and report on meeting transcripts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gabriel Fariello"},
]
keywords = ["zoom", "meetings", "transcripts", "summarize", "cli"]
dependencies = [
    "tiktoken>=0.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
api = ["openai>=1.0"]
dev = ["openai>=1.0", "pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
zmm = "zoom_meeting_manager:main"

[tool.setuptools]
py-modules = ["zoom_meeting_manager"]

[tool.setuptools.package-data]
"*" = ["prompts/**/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
