[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zmm"
dynamic = ["version"]
description = "Zoom Meeting Manager — inventory, summarize, extract, and report on meeting transcripts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Gabriele G. R. Fariello", email = "gfariello@fariel.com"},
]
keywords = ["zoom", "meetings", "transcripts", "summarize", "cli"]
dependencies = [
    "tiktoken>=0.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
api = ["openai>=1.0"]
dev = ["openai>=1.0", "pytest>=7.0", "pytest-cov>=4.0", "build>=1.0", "jsonschema>=4.0"]

[project.scripts]
zmm = "zoom_meeting_manager:main"

[tool.setuptools]
# Ship the CLI as a single module plus the bundled data packages.
py-modules = ["zoom_meeting_manager"]

[tool.setuptools.dynamic]
version = {attr = "zoom_meeting_manager.__version__"}

[tool.setuptools.packages.find]
# Include the bundled data directories (made importable via __init__.py) so
# prompts/ and schemas/ ship in the wheel and resolve via importlib.resources.
include = ["prompts*", "schemas*"]

[tool.setuptools.package-data]
prompts = ["*.txt", "**/*.txt"]
schemas = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
